# repo2md

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  release_notes.rst  requirements.txt
.github/workflows/: python-publish.yaml
repo2md/: __init__.py  config.py  github.py  main.py  tree.py  utils.py
