[project]
name = "repo2md"
dynamic = ["version", "dependencies"]
description = "Python module to convert GitHub repositories to markdown files."
readme = "README.md"
authors = [{ name = "Vignesh Rao", email = "svignesh1793@gmail.com" }]

classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Programming Language :: Python :: 3",
]
keywords = ["repo2md"]
requires-python = ">=3.10"

[tool.setuptools]
packages = ["repo2md"]

[tool.setuptools.dynamic]
version = {attr = "repo2md.version"}
dependencies = { file = ["requirements.txt"] }

[build-system]
requires      = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project.optional-dependencies]
dev = ["pre-commit", "gitverse"]

[project.urls]
Homepage = "https://github.com/thevickypedia/repo2md"
Source = "https://github.com/thevickypedia/repo2md"
"Bug Tracker" = "https://github.com/thevickypedia/repo2md/issues"
"Release Notes" = "https://github.com/thevickypedia/repo2md/blob/main/release_notes.rst"
